add card button and 2 new card-item

--- a/index.html
+++ b/index.html
@@ -41,7 +41,69 @@
                                     <p class="card-body-text">
                                         Entry date: mon - fri
                                     </p>
+                                    <button class="cards-home-button">Buy now</button>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="cards-home-item">
+                        <div class="cards-home-head card-head">
+                            <div class="cards-head-currency">$</div>
+                            <div class="cards-head-value">
+                            <div class="cards-head-number">49</div>
+                            <div class="cards-head-period">/month</div>
+                        </div>
+                        </div>
+                        <div class="cards-home-body card-body">
+                            <ul class="card-body-dates">
+                                <li class="card-body-date">
+                                    <p class="card-body-text">
+                                        Entry date: mon - fri
+                                    </p>
                                     <hr class="card-body-line" />
+                                </li>
+                                <li class="card-body-date">
+                                    <p class="card-body-text">
+                                        Entry date: mon - fri
+                                    </p>
+                                    <hr class="card-body-line" />
+                                </li>
+                                <li class="card-body-date">
+                                    <p class="card-body-text">
+                                        Entry date: mon - fri
+                                    </p>
+                                    <button class="cards-home-button">Buy now</button>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="cards-home-item">
+                        <div class="cards-home-head card-head">
+                            <div class="cards-head-currency">$</div>
+                            <div class="cards-head-value">
+                            <div class="cards-head-number">49</div>
+                            <div class="cards-head-period">/month</div>
+                        </div>
+                        </div>
+                        <div class="cards-home-body card-body">
+                            <ul class="card-body-dates">
+                                <li class="card-body-date">
+                                    <p class="card-body-text">
+                                        Entry date: mon - fri
+                                    </p>
+                                    <hr class="card-body-line" />
+                                </li>
+                                <li class="card-body-date">
+                                    <p class="card-body-text">
+                                        Entry date: mon - fri
+                                    </p>
+                                    <hr class="card-body-line" />
+                                </li>
+                                <li class="card-body-date">
+                                    <p class="card-body-text">
+                                        Entry date: mon - fri
+                                    </p>
+                                    <button class="cards-home-button">Buy now</button>
                                 </li>
                             </ul>
                         </div>
@@ -51,4 +113,4 @@
         </section>
     </main>
 </body>
-</html>
+</html>ц
